--- a/PRemote.Client/PRemote.Client.CLI/PRemote.Client.CLI.csproj
+++ b/PRemote.Client/PRemote.Client.CLI/PRemote.Client.CLI.csproj
@@ -9,4 +9,8 @@
     <PackageReference Include="MessagePack" Version="1.6.1.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\PRemote.Shared\PRemote.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
