--- a/PRemote.Client/PRemote.Client.Android/Properties/AndroidManifest.xml
+++ b/PRemote.Client/PRemote.Client.Android/Properties/AndroidManifest.xml
@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
-	<uses-sdk android:minSdkVersion="15" />
-	<application android:label="PRemote.Client.Android"></application>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" 
+          package="PRemote.Client.Android.PRemote.Client.Android" 
+          android:versionCode="1" 
+          android:versionName="1.0">
+  <uses-sdk android:minSdkVersion="21" />
+  <application android:allowBackup="true" android:label="@string/app_name">
+  </application>
 </manifest>
