Added Android Package info

--- a/PRemote.Client/PRemote.Client.Android/PRemote.Client.Android.csproj
+++ b/PRemote.Client/PRemote.Client.Android/PRemote.Client.Android.csproj
@@ -49,6 +49,10 @@
     <AndroidUseSharedRuntime>False</AndroidUseSharedRuntime>
     <AndroidLinkMode>SdkOnly</AndroidLinkMode>
     <EmbedAssembliesIntoApk>True</EmbedAssembliesIntoApk>
+    <AotAssemblies>false</AotAssemblies>
+    <EnableLLVM>false</EnableLLVM>
+    <BundleAssemblies>false</BundleAssemblies>
+    <AndroidSupportedAbis />
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Raspberry|AnyCPU'">
     <DebugSymbols>true</DebugSymbols>
