--- a/PRemote.Client/PRemote.Client.Android/Properties/AndroidManifest.xml
+++ b/PRemote.Client/PRemote.Client.Android/Properties/AndroidManifest.xml
@@ -2,4 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="PRemote.Client.Android" android:versionCode="1" android:versionName="1.0" android:installLocation="auto">
 	<uses-sdk android:minSdkVersion="21" />
 	<application android:allowBackup="true" android:label="@string/app_name"></application>
+    <permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.INTERNET" />
 </manifest>
